[package]
name = "test"
version = "0.1.0"
authors = ["Антон Синицын <antony@email.su>"]
edition = "2018"
build = "build.rs"

[workspace]
members = [
    "errors",
    "vips-sys",
    "config",
    "libtest",
]

[build-dependencies]
bindgen = "*"

[dependencies]
rocket = "0.4"
rocket-multipart-form-data = { git = "https://github.com/magiclen/rocket-multipart-form-data.git" }
serde_json = "*"
rocket-include-static-resources = "0.7"
rocket-raw-response = "0.3"
errors = { path = "errors" }
vips-sys = { path = "vips-sys" }
config = { path = "config" }
libtest = { path = "libtest" }