[package]
name = "libtest"
version = "0.1.0"
authors = ["sinitcin <antony@email.su>"]
edition = "2018"

[dependencies]
regex = "*"
rocket-multipart-form-data = { git = "https://github.com/magiclen/rocket-multipart-form-data.git" }
serde_json = "*"
base64-stream = "*"
reqwest = "*"
vips-sys = { path = "../vips-sys" }
errors = { path = "../errors" }
config = { path = "../config" }
